[project]
name = "Programming_Python"
version = "0.1.0"
description = "My solutions to LeetCode and similar problems in Python"
authors = [
    {name = "Sudip Sinha", email = "SudipSinha.Bappa@Gmail.com"},
]
dependencies = [
    "numpy>=1.26.4",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Unlicense"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.0",
    "coverage>=7.4.1",
    "hypothesis>=6.98.3",
]
lint = [
    "ruff>=0.2.1",
    "mypy>=1.8.0",
]
doc = [
    "mkdocs>=1.5.3",
]

[tool.ruff]
extend-include = ["*.ipynb"]
